feat: DF1-60 round 3