@@ -1,7 +1,5 @@
 plugins {
     id 'java'
-    id 'application' apply false
-    id 'antlr' apply false
     id 'eclipse'
     id 'idea'
 }
@@ -17,11 +15,10 @@ allprojects {
 
 subprojects {
     apply plugin: 'java'
-    apply plugin: 'junit-test-suite'
 
     java {
         toolchain {
-            languageVersion = JavaLanguageVersion.of(21)
+            languageVersion = JavaLanguageVersion.of(17)
         }
     }
 
@@ -39,12 +36,10 @@ subprojects {
 
     tasks.withType(JavaCompile).configureEach {
         options.encoding = 'UTF-8'
-        options.compilerArgs += ['--enable-preview']
     }
 
     tasks.withType(Test).configureEach {
         useJUnitPlatform()
-        jvmArgs += '--enable-preview'
         testLogging {
             events 'PASSED', 'SKIPPED', 'FAILED'
         }
